force-app/main/default/objects/Survey_Question_Response__c/Survey_Question_Response__c.object-meta.xml
<CustomObject>
    <label>*Survey Question Response</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>