force-app/main/default/objects/Survey_Question_Response__c/fields/Survey_Question_Choice__c.field-meta.xml
<CustomField>
    <fullName>Survey_Question_Choice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Question Choice</label>
    <referenceTo>Survey_Question_Choice__c</referenceTo>
    <relationshipLabel>*Survey Question Response</relationshipLabel>
    <relationshipName>Survey_Question_Response</relationshipName>
    <type>Lookup</type>
</CustomField>