force-app/main/default/objects/Survey_Question_Response__c/fields/Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Response</label>
    <referenceTo>Survey_Response__c</referenceTo>
    <relationshipLabel>*Survey Question Response</relationshipLabel>
    <relationshipName>Survey_Question_Response</relationshipName>
    <type>Lookup</type>
</CustomField>